--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "Личный проект «Седона» от HTML Academy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.0",
-    "autoprefixer": "10.3.1",
-    "browser-sync": "2.27.5",
+    "autoprefixer": "^10.3.1",
+    "browser-sync": "^2.27.5",
     "del": "6.0.0",
     "gulp": "4.0.2",
     "gulp-htmlmin": "5.0.1",
-    "gulp-sass": "5.0.0",
     "gulp-libsquoosh": "^1.0.9",
     "gulp-plumber": "1.2.1",
     "gulp-postcss": "9.0.0",
     "gulp-rename": "2.0.0",
+    "gulp-sass": "5.0.0",
     "gulp-sourcemaps": "3.0.0",
     "gulp-svgstore": "8.0.0",
     "gulp-terser": "2.0.1",
@@ -45,5 +45,8 @@
   ],
   "engines": {
     "node": "14.15.0"
+  },
+  "dependencies": {
+    "sass": "^1.39.2"
   }
 }
